support SFDC Leads in MC sync